--- a/blocks/main/projects/projects.css
+++ b/blocks/main/projects/projects.css
@@ -18,12 +18,12 @@
 .project__name {
   display: inline-block;
   margin-top: 10px;
+  margin-right: 10px;
   grid-area: project-name;
 }
 
 .project__techs {
   display: inline-flex;
-  margin-left: 10px;
   gap: 10px;
   grid-area: project-techs;
 }
