--- a/css/media-queries/mobile-m-480px.css
+++ b/css/media-queries/mobile-m-480px.css
@@ -114,6 +114,7 @@
 
   .code {
     padding: 30px;
+    overflow-x: scroll;
   }
 
 
