--- a/css/media-queries/mobile-s-320px.css
+++ b/css/media-queries/mobile-s-320px.css
@@ -114,6 +114,7 @@
   
   .code {
     padding: 20px;
+    overflow-x: scroll;
   }
 
   /* Footer */
